--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.6.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/mongoose": "^5.11.97",
     "nodemon": "^3.0.1",
